Centering text inside a button set to display flex and justify-content: center is impossible https://bugs.webkit.org/show_bug.cgi?id=148872 <rdar://problem/22590086>

Reviewed by Simon Fraser.

Source/WebCore:

Added new test in fast/forms.

* rendering/RenderButton.cpp:
(WebCore::RenderButton::addChild):
(WebCore::RenderButton::updateAnonymousChildStyle):
(WebCore::RenderButton::styleDidChange):
(WebCore::RenderButton::styleWillChange): Deleted.
(WebCore::RenderButton::setupInnerStyle): Deleted.
* rendering/RenderButton.h:
* rendering/RenderElement.cpp:
(WebCore::RenderElement::propagateStyleToAnonymousChildren):
* rendering/RenderElement.h:
(WebCore::RenderElement::updateAnonymousChildStyle):

LayoutTests:

* fast/forms/button-set-display-flex-justifyContent-center-expected.html: Added.
* fast/forms/button-set-display-flex-justifyContent-center.html: Added.



Canonical link: https://commits.webkit.org/185976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213173 268f45cc-cd09-0410-ab3c-d52691b4dbfc