Source/WebCore/rendering/RenderElement.h
@@ -216,6 +216,10 @@ public:
 
     void removeFromRenderFlowThread();
 
+    // Called before anonymousChild.setStyle(). Override to set custom styles for
+    // the child.
+    virtual void updateAnonymousChildStyle(const RenderObject&, RenderStyle&) const { };
+
 protected:
     enum BaseTypeFlag {
         RenderLayerModelObjectFlag  = 1 << 0,
